# rpy

./: Cargo.toml  pyproject.toml  requirements.txt  test.sh
.env/: pyvenv.cfg
.github/workflows/: CI.yml  unit-test.yml
examples/: addition.py  python.py  threads.py
python/.github/workflows/: unit-test.yml
python/examples/: addition.py  threads.py
python/rpy/: __init__.py  _rpy.pyi  bench.py
python/rpy/test/: __init__.py
src/: lib.rs
